--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
 asgiref==3.7.2
+astroid==3.0.1
+crispy-bootstrap5==0.7
+dill==0.3.7
 Django==4.2.4
 django-bootstrap5==23.3
 django-crispy-forms==2.0
+django-filter==23.5
+djangorestframework==3.14.0
+isort==5.12.0
+Markdown==3.5.1
+mccabe==0.7.0
+platformdirs==4.1.0
+pylint==3.0.2
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
+pytz==2023.3.post1
 sqlparse==0.4.4
+tomli==2.0.1
+tomlkit==0.12.3
 typing_extensions==4.7.1
+gunicorn==20.1.0
